# EntityCraft

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
EntityCraft/: CMakeLists.txt
EntityCraft/include/EntityCraft/: cascadetype.h  column.h  entitycraft.h  nullcheker.h  referencecolumn.h  relationtype.h  requestcallback.h  sfinae.h  storage.h  table.h
EntityCraft/src/: column.cpp  referencecolumn.cpp  table.cpp
EntityCraft/src/visitor/: referencecolumnvisitor.cpp
example/: CMakeLists.txt  example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp  example-5.cpp  example-6.cpp
example/EntityCraft/: CMakeLists.txt  example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp  example-5.cpp  example-6.cpp
example/PostgreAdapter/: CMakeLists.txt  example-1.cpp
example/QueryCraft/: CMakeLists.txt
example/ReflectionApi/: CMakeLists.txt  example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp  example-5.cpp  example-6.cpp
example/SqliteAdapter/: CMakeLists.txt  example-1.cpp
example/TypeConverterApi/: CMakeLists.txt  example-1.cpp
example/db/: example-1.db  example-3.db
include/EntityCraft/: cascadetype.h  column.h  converterhelper.h  entitycraft.h  entitycraft_global.h  nullcheker.h  reference_column.h  referencecolumn.h  relationtype.h  requestcallback.h  requestcallbacktype.h  sfinae.h  storage.h  table.h
include/EntityCraft/converter/: nullcheker.h  relationinserter.h  sfinae.h
include/EntityCraft/visitor/: anycolumnvisitor.h  columnvisitor.h  referencecolumnvisitor.h
libs/QueryCraft/: CMakeLists.txt
libs/QueryCraft/include/QueryCraft/: conditiongroup.h  querycraft.h  sqltable.h
libs/QueryCraft/src/: sqltable.cpp
libs/ReflectionApi/: CMakeLists.txt  README.md
libs/ReflectionApi/include/ReflectionApi/: entity.hpp  property.hpp  referenceproperty.hpp  reflectionapi.hpp
libs/ReflectionApi/include/ReflectionApi/helper/: entityalgorithm.hpp  templates.hpp  tuplealgoritm.hpp
libs/ReflectionApi/include/ReflectionApi/visitor/: anypropertyvisitor.hpp  propertyvisitor.hpp  referencepropertyvisitor.hpp
libs/TypeConverterApi/: CMakeLists.txt  README.md
libs/TypeConverterApi/include/TypeConverterApi/: any.h  containerconverter.h  containerconverter.hpp  typeconverter.h  typeconverter.hpp  typeconverterapi.h  typeconverterapi.hpp  utilities.hpp
libs/TypeConverterApi/include/TypeConverterApi/converter/: typeconverter_base.hpp  typeconverter_containers.hpp  typeconverter_numeric.hpp  typeconverter_pointers.hpp  typeconverter_qt.hpp  typeconverter_strings.hpp
libs/TypeConverterApi/include/TypeConverterApi/helper/: sfinae.hpp  void_t.hpp
libs/TypeConverterApi/src/: any.cpp
libs/driver/DatabaseAdapter/: CMakeLists.txt  README.md
libs/driver/DatabaseAdapter/include/DatabaseAdapter/: connectionpool.h  connectionpool.hpp  databaseadapter.h  databaseadapter.hpp  iconnection.h  iconnection.hpp  idatabasedriver.h  ilogger.h  itransaction.h  transaction_guard.hpp  transaction_isolation.hpp
libs/driver/DatabaseAdapter/include/DatabaseAdapter/exception/: opendatabaseexception.h  opendatabaseexception.hpp  sqlexception.h  sqlexception.hpp
libs/driver/DatabaseAdapter/include/DatabaseAdapter/model/: connection_entry.hpp  databasesettings.h  queryresult.h  queryresult.hpp
libs/driver/DatabaseAdapter/src/: connectionpool.cpp  iconnection.cpp  idatabasedriver.cpp  itransaction.cpp  transaction_guard.cpp
libs/driver/DatabaseAdapter/src/exception/: opendatabaseexception.cpp  sqlexception.cpp
libs/driver/DatabaseAdapter/src/model/: connection_entry.cpp  queryresult.cpp
libs/driver/PostgeAdapter/: CMakeLists.txt
libs/driver/PostgeAdapter/include/PostgreAdapter/: postgreadapter.h  postgreconnectionpool.h  postgredatabaseadapter.h  postgretransaction.h  postgretransactiontype.h
libs/driver/PostgeAdapter/src/: postgreconnection.cpp  postgreconnectionpool.cpp  postgredatabaseadapter.cpp  postgretransaction.cpp
libs/driver/PostgreAdapter/: CMakeLists.txt  README.md
libs/driver/PostgreAdapter/include/PostgreAdapter/: postgreadapter.h  postgreadapter.hpp  postgreadapter_global.h  postgreadapter_global.hpp  postgreconnection.h  postgreconnection.hpp  postgreconnectionpool.h  postgreconnectionpool.hpp  postgredatabaseadapter.h  postgreerrorcode.hpp
libs/driver/PostgreAdapter/src/: postgreconnection.cpp  postgreconnectionpool.cpp  postgredatabaseadapter.cpp  postgreerrorcode.cpp
libs/driver/SqliteAdapter/: CMakeLists.txt  README.md
libs/driver/SqliteAdapter/include/SqliteAdapter/: sqliteadapter.h  sqliteadapter.hpp  sqliteadapter_global.h  sqliteadapter_global.hpp  sqliteconnection.h  sqliteconnection.hpp  sqliteconnectionpool.h  sqliteconnectionpool.hpp  sqlitedatabaseadapter.h  sqliteerrorcode.hpp  sqlitetransaction.h  sqlitetransactiontype.h
libs/driver/SqliteAdapter/src/: sqliteconnection.cpp  sqliteconnectionpool.cpp  sqlitedatabaseadapter.cpp  sqliteerrorcode.cpp  sqlitetransaction.cpp
src/: column.cpp  nullcheker.cpp  storage.cpp  table.cpp
src/visitor/: anycolumnvisitor.cpp  columnvisitor.cpp
tests/: CMakeLists.txt
tests/DatabaseAdapter/: connection_test.cpp  connectionpool_test.cpp  exception_test.cpp  query_result_test.cpp  transaction_guard_test.cpp  validation_test.cpp
tests/DatabaseAdapter/mock/: databaseadapter.hpp  mock_connection.hpp  mock_connection_pool.hpp
tests/PostgreAdapter/: postgreadapter_test.cpp
tests/ReflectionApi/: entity_test.cpp  property_test.cpp  reference_property_test.cpp
tests/SqliteAdapter/: sqliteadapter_test.cpp
tests/TypeConverterApi/: containerconverter_test.cpp  typeconverter._test.cpp  typeconverter_containers_test.cpp  typeconverter_numeric_test.cpp  typeconverter_pointers_test.cpp  typeconverter_qt_test.cpp  typeconverter_strings_test.cpp  typeconverter_test.cpp  utilities_test.cpp
